plex/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: media-dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: media-prod
