plex/media-catalog-app.yml
apiVersion: v1
kind: Service
metadata:
  name: media-catalog-service
spec:
  selector:
    app: media-catalog
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-catalog
  labels:
    app: media-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-catalog
  template:
    metadata:
      labels:
        app: media-catalog
    spec:
      containers:
      - name: media-catalog
        image: repo.treescale.com/jaydamon/media-catalog:0.1.16
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/assets/config
      volumes:
        - name: config-volume
          configMap:
            name: media-config
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: media-storage-service
spec:
  selector:
    app: media-storage
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-storage
  labels: 
    app: media-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-storage
  template:
    metadata:
      labels:
        app: media-storage
    spec:
      containers:
        - name: media-storage
          image: repo.treescale.com/jaydamon/media-storage:0.1.1
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: plex-mysql-service
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
      
---

apiVersion: v1
kind: Endpoints
metadata:
  name: plex-mysql-service
subsets:
  - addresses:
        - ip: 172.16.0.7
    ports:
      - port: 3306
