plex/media-client.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-catalog-service
spec:
  selector:
    app: movie-catalog
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-catalog
  labels:
    app: movie-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-catalog
  template:
    metadata:
      labels:
        app: movie-catalog
    spec:
      containers:
      - name: movie-catalog
        image: repo.treescale.com/jaydamon/media-catalog:0.1.16
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/assets/config
      volumes:
        - name: config-volume
          configMap:
            name: media-config
      imagePullSecrets:
      - name: regcred
