plex/plex-dev-client.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-catalog-service
spec:
  selector:
    app: movie-catalog
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-catalog
  labels:
    app: movie-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-catalog
  template:
    metadata:
      labels:
        app: movie-catalog
    spec:
      containers:
      - name: movie-catalog
        image: repository.factotumsoftware.com/dev-add-to-plex:0.0.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
